--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="todo_box p-2">
     <h2 class="text-center text-color-info">To-Do List</h2>
     <div class="input-group mb-3">
-      <input id="input_text" type="text" class="form-control" placeholder="New task..." aria-label="Recipient's username" aria-describedby="button-addon2">
+      <input id="input_text" type="text" class="form-control" placeholder="New task...">
       <button id="new-item-add" class="btn btn-primary text-white btn-outline-success" type="button" id="button-addon2">Enter</button>
     </div>
 
